--- a/weibo/src/main/webapp/WEB-INF/view/login.html
+++ b/weibo/src/main/webapp/WEB-INF/view/login.html
@@ -65,7 +65,8 @@
 				</p>
 			</div>
 		</form>
-
+		
+		<!-- 忘记密码 -->
 		<form class="forget-form" action="index.html" style="display: none;">
 			<h3 class="form-title">Forget Password ?</h3>
 			<p>Enter your e-mail address below to reset your password.</p>
@@ -86,8 +87,8 @@
 				</button>            
 			</div>
 		</form>
-		<!-- END FORGOT PASSWORD FORM -->
-		<!-- BEGIN REGISTRATION FORM -->
+		
+		<!-- 注册 -->
 		<form class="register-form" action="index.html" style="display: none;">
 			<h3 class="form-title">Sign Up</h3>
 			<p>Enter your account details below:</p>
@@ -179,7 +180,24 @@
 			$(".forget-form").css("display","none");
 		}
 
+		
+		function register(){
+			$.ajax({
+				url: "/user/register.do",
+				type:'post',
+				data:$('#register-submit-btn').serialize(),
+				dataType:'json',
+				success:function(data){
+					alert("注册成功");
+				},
+				error:function(e){
+					
+				}
+			}); 
+		}
+		
 		$(".back-btn").click(backToLogin);
+		$("#register-submit-btn").click(register);
 	</script>
 	</body>
 </html>
