--- a/weibo/src/main/webapp/WEB-INF/view/login.html
+++ b/weibo/src/main/webapp/WEB-INF/view/login.html
@@ -29,7 +29,7 @@
 				<div class="controls">
 					<div class="input-icon left">
 						<i class="icon-user"></i>
-						<input class="m-wrap placeholder-no-fix" type="text" placeholder="请输入用户名" name="name"/>
+						<input class="m-wrap placeholder-no-fix" type="text" placeholder="请输入用户名" name="username"/>
 					</div>
 				</div>
 			</div>
@@ -67,7 +67,7 @@
 		</form>
 		
 		<!-- 忘记密码 -->
-		<form class="forget-form" action="index.html" style="display: none;">
+		<form class="forget-form" action="#" style="display: none;">
 			<h3 class="form-title">Forget Password ?</h3>
 			<p>Enter your e-mail address below to reset your password.</p>
 			<div class="control-group">
@@ -89,7 +89,7 @@
 		</form>
 		
 		<!-- 注册 -->
-		<form class="register-form" action="index.html" style="display: none;">
+		<form class="register-form" action="#" style="display: none;" id="register-form">
 			<h3 class="form-title">Sign Up</h3>
 			<p>Enter your account details below:</p>
 			<div class="control-group">
@@ -141,7 +141,7 @@
 				<button id="register-back-btn" type="button" class="btn_1 back-btn">
 				<i class="fa fa-arrow-circle-left"></i>  Back
 				</button>
-				<button type="submit" id="register-submit-btn" class="btn_1 green pull-right">
+				<button type="button" id="register-submit-btn" class="btn_1 green pull-right">
 				Sign Up <i class="fa fa-arrow-circle-right"></i>
 				</button>            
 			</div>
@@ -185,10 +185,14 @@
 			$.ajax({
 				url: "/user/register.do",
 				type:'post',
-				data:$('#register-submit-btn').serialize(),
+				data:$('#register-form').serialize(),
 				dataType:'json',
 				success:function(data){
-					alert("注册成功");
+					if(data.success){
+						alert("注册成功");
+					}else{
+						alert(data.message);
+					}
 				},
 				error:function(e){
 					
