每天写一点点。。。。

--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -124,6 +124,9 @@
                     <img src="${ctx}/img/logo.jpg" alt="none" class="img-circle" style="height: 40px;width: 40px;">
                 </div>
                 <div class="my-name" style="text-align: center;">
+                	<input type="hidden" id="s-username" value="${user.username}">
+                	<input type="hidden" id="s-comment" value="${user.comment}">
+                	<input type="hidden" id="s-email" value="${user.email}">
                     <h5 style="font-weight: bold;" id="h5-nickname">${user.nickname}</h5>
                 </div>
                 <div class="my-fans">
