记住密码相关

--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -65,7 +65,7 @@
             <div class="reply">
                 <div> <em class="spac3">发条weibo试试</em></div>
                 <div>
-                    <textarea name="" id="reply-content" cols="80" rows="5" style="margin: 9px; resize: none; border: 1px solid #FFC09F;"></textarea>
+                    <textarea name="" id="reply-content" style="height:100px;width:570px; margin: 9px; resize: none; border: 1px solid #FFC09F;"></textarea>
                 </div>
                 <div>
                     <button type="button" class="btn-reply">发布</button>
