--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -74,42 +74,33 @@
 
             <!-- weibo内容区 -->
             <div id="container">
-                <div class="weibo-body">
-                    <div class="inner">
-                        <div class="head-img">
-                            <img src="${ctx}/img/logo.jpg" alt="none" class="img-circle body-img">
-                        </div>
-                        <div class="other" style="display: block; margin-left: 40px;">
-                            <div class="_username">
-                                name
-                            </div>
-                            <div class="time">
-                                今天19：00
-                            </div>
-                            <div class="area">
-                                这里是weibo内容区
-                                <br><br><br><br><br>
-                                1
-                            </div>
-                        </div>
-                         <div class="menu">
-                            <ul>
-                                <li> <a href=""><i class="fa fa-star-o"></i><i class="fa fa-star"></i>收藏</a></li>
-                                <li> <a href=""><i class="fa fa-share"></i>转发</a></li>
-                                <li> <a href=""><i class="fa fa-commenting-o"></i> 回复</a></li>
-                                <li> <a href=""><i class="fa fa-thumbs-o-up"></i><i class="fa fa-thumbs-up"></i>点赞</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- 底部菜单栏 -->
-                   
-                </div>
+            
                 
-                <div class="weibo-body">
-                    2
-                </div>               
+         
             </div>
-       		</div>
+            
+            <div class="pagination">
+            <li><a href='javascript:to_page(1)'>首页</a></li>
+        	<!--  <div class="layui-box layui-laypage layui-laypage-default" id="layui-laypage-6">
+        	  <a href="javascript:;" class="layui-laypage-prev layui-disabled" data-page="0">
+        		<em>←</em>
+        	  </a>
+        		<span class="layui-laypage-curr">
+        			<em class="layui-laypage-em"></em>
+        			<em>1</em>
+        		</span>
+        		<a href="javascript:;" data-page="2">2</a>
+        		<a href="javascript:;" data-page="3">3</a>
+        		<a href="javascript:;" data-page="4">4</a>
+        		<a href="javascript:;" data-page="5">5</a>
+        		<span class="layui-laypage-spr">…</span>
+        		<a href="javascript:;" class="layui-laypage-last" title="尾页" data-page="10">尾页</a>
+        		<a href="javascript:;" class="layui-laypage-next" data-page="2">
+        		<em>→</em></a>
+        	</div> -->
+        </div>
+            
+       	</div>
 		<!-- 右侧边栏 -->
         
         <div class="side-right">
@@ -183,3 +174,36 @@
     });
 </script>
 </html>
+
+
+
+   <!--  <div class="weibo-body">
+                    <div class="inner">
+                        <div class="head-img">
+                            <img src="${ctx}/img/logo.jpg" alt="none" class="img-circle body-img">
+                        </div>
+                        <div class="other" style="display: block; margin-left: 40px;">
+                            <div class="_username">
+                                name
+                            </div>
+                            <div class="time">
+                                今天19：00
+                            </div>
+                            <div class="area">
+                                这里是weibo内容区
+                                <br><br><br><br><br>
+                                1
+                            </div>
+                        </div>
+                         <div class="menu">
+                            <ul>
+                                <li> <a href=""><i class="fa fa-star-o"></i><i class="fa fa-star"></i>收藏</a></li>
+                                <li> <a href=""><i class="fa fa-share"></i>转发</a></li>
+                                <li> <a href=""><i class="fa fa-commenting-o"></i> 回复</a></li>
+                                <li> <a href=""><i class="fa fa-thumbs-o-up"></i><i class="fa fa-thumbs-up"></i>点赞</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    底部菜单栏
+                   
+                </div> -->
